---------------------------------------------------------------------------------------------------
Version: 1.9.2
Date: ???
  Bugfixes:
    - Fixed 'Ground' search option not working
---------------------------------------------------------------------------------------------------
Version: 1.9.1
Date: 20 July 2022
  Features:
    - Added integration with Factorissimo2 - notnotmelon fork so that viewing results will take you to the factory that contains the result location
  Bugfixes:
    - Fixed crash when another mod destroys the Factory Search interface
---------------------------------------------------------------------------------------------------
Version: 1.9.0
Date: 6 July 2022
  Features:
    - Added 'Ingredient' search option to search for machines that consume a particular item
    - 'Entity' search now finds resources (including Space Exploration's core seams)
---------------------------------------------------------------------------------------------------
Version: 1.8.0
Date: 20 June 2022
  Features:
    - Added distance from player to all result tooltips that are on the player's current surface
    - Changed arrow sprite to one from Better Alert Arrows (let me know if you have a better suggestion for an arrow sprite)
    - Added 'Clear highlights when closing interface' setting to control whether the highlight boxes and arrow are removed when the interface is closed
    - Added 'Highlight duration' setting to control the length of time that the highlight boxes and arrow exist for
    - Added 'Zoom level' setting to control initial zoom when viewing results
  Changes:
    - Default zoom level is now much less zoomed in
  Compatability:
    - Fixed arrow disappearing when activating jetpack
---------------------------------------------------------------------------------------------------
Version: 1.7.1
Date: 14 June 2022
  Features:
    - Fixed crash when searching for fluids in 'Storage' mode